# PortfollioAgent

./: .gitignore  Portfolio & Market Research Agent.pptx  README.md  preprocess_sec_fillings_data.ipynb  pyproject.toml  sec_filings_output.json  validator_test_results_20251028_123423.json  validator_test_results_20251028_123648.json  validator_test_results_20251028_124651.json
backend/: .env  constant.py  doc_2.txt  documentation.md  dummy.env  get_market_cap.py  main.py  qdrant_run.sh  qdrant_run_v2.sh
backend/agents/: market_agent.py  planner.py  portfolio_agent.py  query_classifier.py  response_generator.py  retriever.py  validator.py
backend/tools/: calculator.py  (+2 more)
evaluations/: function_calling_evaluation_20251018_123825.json  function_calling_evaluation_20251018_124113.json  function_calling_evaluation_20251023_012304.json  query_classification_test_results_20251018_025306.json  query_classification_test_results_20251018_101321.json  query_classification_test_results_20251018_101611.json  query_classification_test_results_20251018_101745.json  query_classification_test_results_20251019_173127.json  query_classification_test_results_20251019_174728.json  query_classification_test_results_20251019_175527.json  query_classification_test_results_20251028_121946.json  query_classification_test_results_20251028_122625.json  validator_test_results_20251018_130929.json  validator_test_results_20251018_131132.json  validator_test_results_20251018_134033.json  validator_test_results_20251018_134204.json  validator_test_results_20251028_124943.json
ui/: app.py  app_v2.py
(+39 files in other folders)
